--- a/index.html
+++ b/index.html
@@ -8,32 +8,39 @@
 
 	<body>
 
-		<div class="container">
-			<div class="alert alert-error error-search hidden"></div>
+		<section class="section section-v1">
 
-			<form class="form form-search">
-				<p class="search-tip hidden">
-					<small>You can use the up/down arrow keys to navigate results, or hit enter to select one.</small>
-				</p>
-				<input type="text" class="input input-search" placeholder="Start your search here" />
-				<!-- <i class="fa fa-search"></i> -->
-			</form>
+			<div class="container">
+				<div class="alert alert-error error-search hidden"></div>
 
-			<ul class="list list-results"></ul>
-		</div><!-- .container -->
+				<form class="form form-search">
+					<p class="search-tip">
+						<small>You can use the up/down arrow keys to navigate results, or hit enter to select one.</small>
+					</p>
+					<input type="text" class="input input-search" placeholder="Start your search here" />
+					<!-- <i class="fa fa-search"></i> -->
+					<ul class="list list-results"></ul>
+				</form>
+
+			</div><!-- .container -->
+			
+		</section><!-- .section-v1 -->
+
+		<section class="section section-v2">
+		</section><!-- .section-v2 -->
 		
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script type="text/javascript" src="js/JSONPUtil.js"></script>
-		<script type="text/javascript" src="js/constants.js"></script>
+		<script type="text/javascript" src="js/utils/JSONPUtil.js"></script>
+		<script type="text/javascript" src="js/utils/constants.js"></script>
 		<script type="text/javascript" src="js/libs/microtemplate.js"></script>
 		<script type="text/javascript" src="js/libs/tinyPubSub.js"></script>
 		<script type="text/javascript" src="js/searchWidget.js"></script>
 		<script type="text/javascript" src="js/searchActions.js"></script>
-		<script type="text/javascript" src="js/searchTipUIUpdater.js"></script>
 		<script type="text/javascript" src="js/searchResultsUIUpdater.js"></script>
+		<script type="text/javascript" src="js/searchInputUIUpdater.js"></script>
 
 		<script type="text/html" id="tmpl_searchResult">
-		    <li data-result-id="<%= id %>">
+		    <li data-result-id="<%= id %>" data-name="<%= name %>">
 		    	<a href="<%= url %>">
 		    		<span class="result-name"><%= name %></span>
 		    		<small class="result-location"><%= location %></small>
