--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Autocomplete - Niche Recruiting Reviews - Niche</title>		
 		<link rel="stylesheet" href="css/main.css"/>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro|Droid+Serif|Droid+Sans' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
@@ -30,8 +30,9 @@
 				<p class="search-tip">
 					<small>You can use the up/down arrow keys to navigate results, or hit enter to select one.</small>
 				</p>
-				<input type="text" class="input input-search" placeholder="Start your search here" />
-				<!-- <i class="fa fa-search"></i> -->
+				<div class="input-search-container">
+					<input type="text" class="input input-search" placeholder="Start your search here" />
+				</div>
 				<ul class="list list-results"></ul>
 			</form>
 		</div><!-- .container -->
