--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Autocomplete - Niche Recruiting Reviews - Niche</title>		
 		<link rel="stylesheet" href="css/main.css"/>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro|Droid+Serif|Droid+Sans' rel='stylesheet' type='text/css'>
+		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> TODO: font awesome? -->
+		<link href='https://fonts.googleapis.com/css?family=Droid+Serif|Droid+Sans' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
@@ -54,6 +54,7 @@
 		<script type="text/javascript" src="js/themeActions.js"></script>
 		<script type="text/javascript" src="js/searchResultsUIUpdater.js"></script>
 		<script type="text/javascript" src="js/searchInputUIUpdater.js"></script>
+		<script type="text/javascript" src="js/themeMenuUIUpdater.js"></script>
 
 		<script type="text/html" id="tmpl_searchResult">
 		    <li data-result-id="<%= id %>" data-name="<%= name %>">
