Converting to scss

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Autocomplete - Niche Recruiting Reviews - Niche</title>		
-		<link rel="stylesheet" href="css/main.css"/>
+		<link rel="stylesheet" href="public/main.css"/>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<link href='https://fonts.googleapis.com/css?family=Droid+Serif|Droid+Sans' rel='stylesheet' type='text/css'>
 	</head>
@@ -39,7 +39,7 @@
 				<p>Bacon ipsum dolor amet t-bone frankfurter swine beef, shankle short ribs pork belly turkey picanha. Doner spare ribs meatball turducken cow cupim. Pork belly pork chop pancetta, fatback ham hock.</p>
 				<p>Turducken tail brisket ribeye ground round. Frankfurter venison cow leberkas landjaeger ham hock alcatra ham. Tri-tip pork chop drumstick kielbasa, prosciutto jowl bresaola shoulder biltong flank tail landjaeger ground round ham hock chucks.</p>
 			</article>
-		</div>
+		</div><!-- .container-article-sample -->
 		
 		<script src="http://requirejs.org/docs/release/2.1.20/minified/require.js" data-main="js/app"></script>
 
