--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<link rel="stylesheet" href="public/main.css"/>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<link href='https://fonts.googleapis.com/css?family=Droid+Serif|Droid+Sans' rel='stylesheet' type='text/css'>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="UTF-8">
+		<meta name="author" content="Kim Cooperrider">
 	</head>
 
 	<body>
@@ -34,12 +37,12 @@
 			</form>
 		</div><!-- .container-autocomplete -->
 
-		<div class="container container-article-sample">
+		<!-- <div class="container container-article-sample">
 			<article class="article article-sample">
 				<p>Bacon ipsum dolor amet t-bone frankfurter swine beef, shankle short ribs pork belly turkey picanha. Doner spare ribs meatball turducken cow cupim. Pork belly pork chop pancetta, fatback ham hock.</p>
 				<p>Turducken tail brisket ribeye ground round. Frankfurter venison cow leberkas landjaeger ham hock alcatra ham. Tri-tip pork chop drumstick kielbasa, prosciutto jowl bresaola shoulder biltong flank tail landjaeger ground round ham hock chucks.</p>
 			</article>
-		</div><!-- .container-article-sample -->
+		</div><.container-article-sample -->
 		
 		<script src="http://requirejs.org/docs/release/2.1.20/minified/require.js" data-main="js/app"></script>
 
@@ -48,7 +51,6 @@
 		    	<a href="<%= url %>">
 		    		<span class="result-name">
 		    			<%= name %>
-		    			<i class="fa fa-chevron-circle-right"></i>
 		    		</span>
 		    		<% if (location !== 'null') { %>
 			    		<small class="result-location"><%= location %></small>
