Make search icon clickable for cooler UX, minor cleanup of JS

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<div class="container container-themes">
 			<ul class="list list-themes">
 				<li class="theme-active" data-theme="0">
-					<a>Theme 0</a>
+					<a href="">Theme 0</a>
 				</li>
 				<li data-theme="1">
-					<a>Theme 1</a>
+					<a href="">Theme 1</a>
 				</li>
 			</ul>
 		</div><!-- .container-themes -->
@@ -28,7 +28,10 @@
 		<div class="container container-autocomplete theme-0">
 			<form class="form form-search">
 				<div class="input-search-container">
-					<input type="text" class="input input-search" placeholder="Start your search here" />
+					<input autofocus type="text" class="input input-search" placeholder="Start your college search here" />
+					<a href="" class="link-search">
+						<i class="fa fa-search"></i>
+					</a>
 				</div>
 				<ul class="list list-results"></ul>
 			</form>
