Num results display

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 		<div class="container alert alert-error error-search hidden"></div>
 
 		<div class="container container-autocomplete theme-0">
+			<div class="container-num-results">
+				<small class="num-results"></small>
+			</div>
 			<form class="form form-search">
 				<div class="input-search-container">
 					<input autofocus type="text" class="input input-search" placeholder="Start your college search here" />
