Add requirejs optimization via grunt

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</form>
 		</div><!-- .container-autocomplete -->
 		
-		<script src="http://requirejs.org/docs/release/2.1.20/minified/require.js" data-main="js/app"></script>
+		<script src="http://requirejs.org/docs/release/2.1.20/minified/require.js" data-main="public/scripts"></script>
 
 		<script type="text/html" id="tmpl_searchResult">
 		    <li class="result" data-result-id="<%= id %>" data-name="<%= name %>">
